Fix layout overflow (#168)

--- a/components/page-layout/server.css
+++ b/components/page-layout/server.css
@@ -6,6 +6,7 @@
     min-content
     1fr
     min-content;
+  grid-template-columns: minmax(0, 1fr);
 
   min-height: 100svh;
 
